# easybib

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
demo/: paper.tex
src/easybib/: __init__.py  api.py  cli.py  conversions.py  core.py
tests/: test_cli.py  test_core.py  test_fetch.py  test_integration.py
