[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "easybib"
version = "0.3.0"
description = "Automatically fetch BibTeX entries from INSPIRE and ADS for LaTeX projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Gregory Ashton", email = "gregory.ashton@ligo.org"},
]
dependencies = [
    "requests",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/GregoryAshton/easybib"
Repository = "https://github.com/GregoryAshton/easybib"

[project.scripts]
easybib = "easybib.cli:main"

[tool.pytest.ini_options]
markers = [
    "integration: tests that make real network calls to external APIs",
]
